started figuring out how I want to do some of the core parsing

--- a/components/my-footer.html
+++ b/components/my-footer.html
@@ -1,3 +1,6 @@
 <footer>
   <p>footer</p>
+  <!-- implied <div data-bascik-slot="default"></div> -->
+  <div data-basic-slot></div>
+  <div data-bascik-slot="my-named-slot"></div>
 </footer>
