--- a/components/custom-nav.html
+++ b/components/custom-nav.html
@@ -3,6 +3,7 @@
     <li><a href="/">index</a></li>
     <li><a href="/about">about</a></li>
     <li><a href="/new">new</a></li>
+    <li><a href="/sub/">sub page</a></li>
   </ul>
 </nav>
 <!-- 
