Add scoped styles via classes

--- a/components/my-footer/my-footer.html
+++ b/components/my-footer/my-footer.html
@@ -1,4 +1,5 @@
 <footer>
+  <hr class="hr" />
   <p>footer</p>
   <!-- implied <div data-bascik-slot="default"></div> -->
   <div data-basic-slot></div>
