--- a/components/custom-nav/custom-nav.html
+++ b/components/custom-nav/custom-nav.html
@@ -1,5 +1,6 @@
-<nav>
+<nav class="navigation header">
   <ul>
+    <li class="home logo">Bascik</li>
     <li><a href="/">index</a></li>
     <li><a href="/about">about</a></li>
     <li><a href="/new">new</a></li>
