Only add class selectors for scoped class styles

--- a/components/my-footer/my-footer.html
+++ b/components/my-footer/my-footer.html
@@ -1,6 +1,6 @@
 <footer>
   <hr class="hr" />
-  <p>footer</p>
+  <p id="footer-p">footer</p>
   <!-- implied <div data-bascik-slot="default"></div> -->
   <div data-basic-slot></div>
   <div data-bascik-slot="my-named-slot"></div>
