- [x] Strip scoped id styling from components - [x] Remove comments from scoped styles

--- a/components/my-footer/my-footer.css
+++ b/components/my-footer/my-footer.css
@@ -2,7 +2,7 @@
   border: 8px solid #d3ff8d;
   border-radius: 25px;
 }
-/* Will be ignored */
+/* ID selectors will be removed */
 [id] {
   color: #d3ff8d;
 }
