Experimenting with scoped js and petite-vue in components

--- a/components/my-btn2.html
+++ b/components/my-btn2.html
@@ -1,6 +1,6 @@
 <button id="my-btn2" type="button">Click</button>
 
-<script>
+<script data-bascik-scoped>
   document.getElementById("my-btn2").addEventListener("click", () => {
     alert("hello");
   });
