--- a/components/my-btn.html
+++ b/components/my-btn.html
@@ -1,7 +1,8 @@
 <button id="my-btn" type="button">Click</button>
 
-<script>
+<script data-bascik-scoped>
   document.getElementById("my-btn").addEventListener("click", () => {
     alert("hello");
   });
+  console.log(document.getElementsByTagName("p"));
 </script>
