test comps and thought process update

--- a/components/my-btn.html
+++ b/components/my-btn.html
@@ -1,8 +1,6 @@
-<button id="my-btn" type="button">Click</button>
-
+<button id="my-btn2" type="button">Click</button>
 <script data-bascik-scoped>
   document.getElementById("my-btn").addEventListener("click", () => {
     alert("hello");
   });
-  console.log(document.getElementsByTagName("p"));
 </script>
