More id scoping coverage and not going to scope name because it doesn't make sense to

--- a/components/scoped-js-a.html
+++ b/components/scoped-js-a.html
@@ -1,6 +1,13 @@
 <div id="js-a">
   <p id="js-b">scoped-js-a</p>
   <slot-component></slot-component>
+  <form>
+    <label for="fname">First name:</label>
+    <input type="text" id="fname" name="fname" /><br /><br />
+    <label for="lname">Last name:</label>
+    <input type="text" id="lname" name="lname" /><br /><br />
+    <input type="submit" value="Submit" />
+  </form>
 </div>
 
 <script>
