--- a/components/my-btn2.html
+++ b/components/my-btn2.html
@@ -1,7 +1,7 @@
-<button id="my-btn2" type="button">Click</button>
+<button id="my-btn" type="button">Click</button>
 
-<script data-bascik-scoped>
-  document.getElementById("my-btn2").addEventListener("click", () => {
-    alert("hello");
+<script>
+  document.getElementById("my-btn").addEventListener("click", () => {
+    alert("my-btn2 js");
   });
 </script>
