Fixed removal of new lines in script tags

--- a/components/test-comp/test-comp.html
+++ b/components/test-comp/test-comp.html
@@ -4,6 +4,8 @@
 <p name="my-name">Test Comp P Tag</p>
 
 <script>
-  document.getElementsByName('my-name').forEach(el => el.style.textDecoration = 'underline');
+  document.getElementsByName('my-name').forEach(el => {
+    el.style.textDecoration = 'underline';
+  });
   document.getElementById('my-div-id').style.color = '#d3ff8d';
 </script>
