- Deprecated the styles.js file as most of the functionality is being taken over in javascript.js - Scope javascript variables with IIFE functions - Each instance of component's id, name, and class attributes are now unique so there are not collisions when you have multiple instances of a component on a page - Moved parsing of CSS from initial loading of a component to when the usage of each component is evaluated, this was to support the unique id per instance - Performance increase by reading the html and css files at the same time

--- a/components/test-comp/test-comp.html
+++ b/components/test-comp/test-comp.html
@@ -2,16 +2,36 @@
   Test Comp Div Tag
 </div>
 <p name="my-name">Test Comp P Tag</p>
-<button id="btn">Change Color</button>
+<button id="btn" class="btn">Change Color</button>
 
 <script>
   document.getElementsByName('my-name').forEach(el => {
     el.style.textDecoration = 'underline';
   });
+
   document.getElementById('my-div-id').style.color = '#d3ff8d';
+
   document.getElementById("btn").addEventListener("click", () => {
     document.getElementsByName('my-name').forEach(el => {
       el.style.color = '#ff7a09';
     });
   });
+</script>
+
+
+<script>
+  // querySelector|querySelectorAll|getElementsByClassName
+  const btn = document.querySelector('.btn')
+  btn.style.backgroundColor = '#d3ff8d'
+  
+  const btns = document.querySelectorAll(".btn")
+  btns.forEach((btn) => {
+    btn.style.border = 'dashed'
+  })
+</script>
+
+<script>
+  const myBtns = document.getElementsByClassName('btn')
+  myBtns[0].style.width='120px'
+  myBtns[0].style.height='30px'
 </script>
