add sub page to the sub dir

--- a/components/custom-nav/custom-nav.html
+++ b/components/custom-nav/custom-nav.html
@@ -5,6 +5,7 @@
     <li><a href="/about">about</a></li>
     <li><a href="/new">new</a></li>
     <li><a href="/sub/">sub page</a></li>
+    <li><a href="/sub/par">sub par page</a></li>
     <li><a href="/x/">not found</a></li>
   </ul>
 </nav>
