Add examples of CSS files for pages and how to do css for print

--- a/components/custom-nav/custom-nav.css
+++ b/components/custom-nav/custom-nav.css
@@ -43,3 +43,10 @@
     transform: perspective(500px) rotateY(40deg);
   }
 }
+
+@media print {
+  .home.logo {
+    background-color: #fff;
+    color: #000;
+  }
+}
